--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Front-End Web Developer</h1>
                 <p class="lead">I am Khalid, a passionate web developer based in London..</p>
                 <div class="d-grid gap-2 d-flex justify-content-md-start">
-                  <div><img src="assets/images/github.svg" alt="github-icon" width="30"></div>
-                  <div><img src="assets/images/linkedin.svg" alt="linkedin-icon" width="30"></div>
+                  <div>
+                    <a href="https://github.com/Khalid1113"><img src="assets/images/github.svg" alt="github-icon" width="30"></a>
+                </div>
+                  <div>
+                    <a href="https://www.linkedin.com/in/khalid-m-osman-912371214/"><img src="assets/images/linkedin.svg" alt="linkedin-icon" width="30"></a>
+                </div>
                 </div>
                 <div class="d-flex stack pt-5">
                     <p>Stack | </p>
